--- a/src/main/webapp/inward/inward_reprint_bill_final.xhtml
+++ b/src/main/webapp/inward/inward_reprint_bill_final.xhtml
@@ -24,7 +24,10 @@
                                     <p:panel header="Bill Reprints"
                                              rendered="#{inwardSearch.bill.patientEncounter.admissionType.admissionTypeEnum ne 'DayCase' and sessionController.userPreference.applicationInstitution eq 'Ruhuna'}">                            
                                         <h:panelGrid columns="1">
-                                            <p:commandButton value="Final Bill &amp; Profesional Bill" ajax="false"   >
+                                            <p:commandButton value="Final Bill &amp; Profesional Bill - Single page" ajax="false"   >
+                                                <p:printer target="claimablePatientCopy2" ></p:printer>
+                                            </p:commandButton>
+                                            <p:commandButton value="Final Bill &amp; Profesional Bill - 3 pages" ajax="false"   >
                                                 <p:printer target="professionalAndFinaBill" ></p:printer>
                                             </p:commandButton>
                                             <p:commandButton value="Final Bill &amp; Profesional Bill(Duplicate)" ajax="false"   >
@@ -189,10 +192,10 @@
 
 
 
-                        <h:panelGroup id="claimablePatientCopy" styleClass="noBorder" rendered="#{sessionController.userPreference.applicationInstitution ne 'Ruhuna'}">                  
+                        <h:panelGroup id="claimablePatientCopy" styleClass="noBorder" rendered="false">                  
                             <bi:finalBill   bill="#{inwardSearch.bill}" showProfessional="true"/>
                         </h:panelGroup>
-                        <h:panelGroup id="claimablePatientCopy2" styleClass="noBorder" rendered="false" >                  
+                        <h:panelGroup id="claimablePatientCopy2" styleClass="noBorder" rendered="true" >                  
                             <bi:finalBill_vat   bill="#{inwardSearch.bill}"   showProfessional="true"/>
                         </h:panelGroup>
 
