--- a/src/main/webapp/lab/search_for_reporting_ondemand.xhtml
+++ b/src/main/webapp/lab/search_for_reporting_ondemand.xhtml
@@ -156,7 +156,7 @@
                             <p:column  headerText="Patient" styleClass="alignTop" >
                                 <h:commandLink id="colPtDetail" rendered="#{webUserController.hasPrivilege('LabEditPatient') and pi.billItem.bill.approvedAnyTest}" 
                                                value="#{pi.billItem.bill.patient.person.nameWithTitle}, #{pi.billItem.bill.patient.age}" 
-                                               action="patient" 
+                                               action="/patient" 
                                                style="text-decoration:underline;"
                                                styleClass="#{pi.billItem.bill.cancelled or pi.billItem.transRefund ? 'redtext':''}"
                                                >
@@ -165,7 +165,7 @@
                                 </h:commandLink>
                                 <h:commandLink id="colPtDetail1" rendered="#{!pi.billItem.bill.approvedAnyTest}"
                                                value="#{pi.billItem.bill.patient.person.nameWithTitle}, #{pi.billItem.bill.patient.age}" 
-                                               action="patient" 
+                                               action="/patient" 
                                                style="text-decoration:underline;"
                                                styleClass="#{pi.billItem.bill.cancelled or pi.billItem.transRefund ? 'redtext':''}"
                                                >
@@ -335,11 +335,18 @@
                                             <h:outputLabel value="#{dpr.dataEntryAt}" >
                                                 <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a"/>
                                             </h:outputLabel>
+                                            <h:outputLabel value=" by " ></h:outputLabel>
+                                            <h:outputLabel value="#{dpr.dataEntryUser.webUserPerson.nameWithTitle}"  >
+                                            </h:outputLabel>
                                             <br/>
                                             <h:outputLabel value="Approved at " rendered="#{dpr.approved}" ></h:outputLabel>
                                             <h:outputLabel value="#{dpr.approveAt}"  rendered="#{dpr.approved}" >
                                                 <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a"/>
                                             </h:outputLabel>
+                                            <h:outputLabel value=" by " rendered="#{dpr.approved}" ></h:outputLabel>
+                                            <h:outputLabel value="#{dpr.approveUser.webUserPerson.nameWithTitle}"  rendered="#{dpr.approved}" >
+                                            </h:outputLabel>
+                                            
                                             <br/>
                                             <h:outputLabel value="Printed at "  rendered="#{dpr.printed}" ></h:outputLabel>
                                             <h:outputLabel value="#{dpr.printingAt}"  rendered="#{dpr.printed}" >
