Signed-off-by: Buddhika <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin_add_new_user.xhtml
+++ b/src/main/webapp/admin_add_new_user.xhtml
@@ -14,7 +14,7 @@
                     You are NOT authorized
                 </h:panelGroup>
 
-                <h:panelGroup rendered="true" >
+                <h:panelGroup rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" >
 
                     <h:form>
 
