--- a/src/main/webapp/admin_user_privilages.xhtml
+++ b/src/main/webapp/admin_user_privilages.xhtml
@@ -14,7 +14,10 @@
 
             <ui:define name="content">
                 <h:form  >
-                    <p:panelGrid columns="2">                   
+                    <h:panelGroup  rendered="#{!webUserController.hasPrivilege('AdminManagingUsers')}"  >
+                        <p:outputLabel value="YOU ARE NOT AUTHERIZED." ></p:outputLabel>
+                    </h:panelGroup>
+                    <p:panelGrid columns="2"  rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" >                   
 
                         <p:panel header="Manage User Privilages"   >
 
