--- a/src/main/webapp/lab/patient_report.xhtml
+++ b/src/main/webapp/lab/patient_report.xhtml
@@ -267,53 +267,74 @@
                                             <p:commandButton value="Edit Selected Template" ajax="false" action="#{patientReportController.toEditTemplate()}" >
                                             </p:commandButton>
                                             <p:dialog id="dlgPath" header="Pathology Report" widgetVar="dlgPath" modal="true">
-
-
-                                                <p:commandButton id="btnAddTemplateToReport"
-                                                                 oncomplete="PF('dlgPath').hide();" 
-                                                                 process="@this dlgPath" update="reportEditor" 
-                                                                 value="Add To Report" 
-                                                                 actionListener="#{patientReportController.addTemplateToReport()}" ></p:commandButton>
-
-
-
-                                                <table >
-                                                    <tr>
-                                                        <th>
-                                                            <p:outputLabel value="Variable" ></p:outputLabel>
-                                                        </th>
-                                                        <th>
-                                                            <p:outputLabel value="Value" ></p:outputLabel>
-                                                        </th>
-                                                    </tr>
-
-                                                    <ui:repeat value="#{patientReportController.selectables}" var="sel" >
+                                                <h1>#{patientReportController.investigationItem}</h1>
+                                                <h:panelGroup rendered="#{patientReportController.investigationItem eq null}" >
+                                                    <p:outputLabel value="Please select a template first" ></p:outputLabel>
+                                                    <p:commandButton id="btnCloseGlg1"
+                                                                     oncomplete="PF('dlgPath').hide();" 
+                                                                     process="@this dlgPath" update="reportEditor" 
+                                                                     value="Close"></p:commandButton>
+                                                </h:panelGroup>
+                                                <h:panelGroup rendered="#{patientReportController.investigationItem ne null}" >
+                                                    <p:commandButton id="btnAddTemplateToReport"
+                                                                     oncomplete="PF('dlgPath').hide();" 
+                                                                     process="@this dlgPath" update="reportEditor" 
+                                                                     value="Add To Report" 
+                                                                     actionListener="#{patientReportController.addTemplateToReport()}" ></p:commandButton>
+                                                    <table >
                                                         <tr>
-                                                            <td>
-                                                                <p:outputLabel value="#{sel.name}" ></p:outputLabel>
-                                                            </td>
-                                                            <td>
-                                                                <h:panelGroup >
-                                                                    <p:inputText value="#{sel.selectedValue}" rendered="#{sel.inputText}" ></p:inputText>
-                                                                    <p:selectOneMenu  value="#{sel.selectedValue}" rendered="#{sel.selectOneMenu}" >
-                                                                        <f:selectItems value="#{sel.options}" ></f:selectItems>
-                                                                    </p:selectOneMenu>
-                                                                </h:panelGroup>
-                                                            </td>
+                                                            <th>
+                                                                <p:outputLabel value="Variable" ></p:outputLabel>
+                                                            </th>
+                                                            <th>
+                                                                <p:outputLabel value="Value" ></p:outputLabel>
+                                                            </th>
                                                         </tr>
-                                                    </ui:repeat>
-                                                </table>
+
+                                                        <ui:repeat value="#{patientReportController.selectables}" var="sel" >
+                                                            <tr>
+                                                                <td>
+                                                                    <p:outputLabel value="#{sel.name}" ></p:outputLabel>
+                                                                </td>
+                                                                <td>
+                                                                    <h:panelGroup >
+                                                                        <p:inputText value="#{sel.selectedValue}" rendered="#{sel.inputText}" ></p:inputText>
+                                                                        <p:selectOneMenu  value="#{sel.selectedValue}" rendered="#{sel.selectOneMenu}" >
+                                                                            <f:selectItems value="#{sel.options}" ></f:selectItems>
+                                                                        </p:selectOneMenu>
+                                                                    </h:panelGroup>
+                                                                </td>
+                                                            </tr>
+                                                        </ui:repeat>
+                                                    </table>
+                                                </h:panelGroup>
+
+
 
 
 
                                             </p:dialog>
 
                                         </h:panelGrid>
-                                        <h1>#{patientReportController.currentPatientReport.patientReportItemValues}</h1>
-                                        <p:editor id="reportEditor" value="#{patientReportController.currentPatientReport.templateItem.lobValue}" widgetVar="editor" height="650" >
+                                        <p:panel id="reportEditor" >
+                                            <h:panelGroup rendered="false" >
+                                                <h1>A</h1>
+                                                #{patientReportController.currentPatientReport}
+                                                <h1>B</h1>
+                                                <ui:repeat value="#{patientReportController.currentPatientReport.patientReportItemValues}"
+                                                           var="e" >
+                                                    #{e.investigationItem.ixItemType}
+                                                </ui:repeat>
+                                                <h1>C</h1>
+                                                #{patientReportController.currentPatientReport.templateItem.lobValue}
+                                                <h1>D</h1>
+                                                <h1>E</h1>
+                                            </h:panelGroup>
+                                            <p:editor rendered="#{patientReportController.currentPatientReport.templateItem ne null}" 
+                                                      value="#{patientReportController.currentPatientReport.templateItem.lobValue}" widgetVar="editor" height="650" >
 
-                                        </p:editor>
-
+                                            </p:editor>
+                                        </p:panel>
 
                                     </p:panel>
 
