SMS Sent Coding Completed. Need to check.

--- a/src/main/webapp/resources/ezcomp/preferences.xhtml
+++ b/src/main/webapp/resources/ezcomp/preferences.xhtml
@@ -125,6 +125,9 @@
                             <h:outputLabel value="OPD Settle Without Patient Phone Number"></h:outputLabel>
                             <h:selectBooleanCheckbox value="#{sessionController.currentPreference.opdSettleWithoutPatientPhoneNumber}"/>
 
+                             <h:outputLabel value="Print Barcode in OPD Bill"></h:outputLabel>
+                            <h:selectBooleanCheckbox value="#{sessionController.currentPreference.printBarcodeInOpdBill}"/>
+
                         </h:panelGrid>
 
                     </p:panel>
