--- a/src/main/webapp/bill_reprint.xhtml
+++ b/src/main/webapp/bill_reprint.xhtml
@@ -164,14 +164,14 @@
 
                         </h:panelGroup>
 
-                        <h:panelGroup id="gpBillPreviewRmh" rendered="#{sessionController.currentPreference.opdBillPaperType eq 'Rmh' }">
+<!--                        <h:panelGroup id="gpBillPreviewRmh" rendered="#{sessionController.currentPreference.opdBillPaperType eq 'Rmh' }">
                             <div class="nonPrintBlock">
                                 <p:commandButton value="Print" ajax="false" action="#"  >
                                     <p:printer target="gpBillPreviewRmh" ></p:printer>
                                 </p:commandButton>
                             </div>
                             <bi:opdBillPrintRmh bill="#{billSearch.bill}" dup="false"/>
-                        </h:panelGroup>
+                        </h:panelGroup>-->
 
                         <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'PosPaper'}">
                             <h:panelGroup rendered="#{sessionController.currentPreference.opdBillPaperType eq 'false'}">
