--- a/src/main/webapp/resources/inward/bill/finalBill_vat.xhtml
+++ b/src/main/webapp/resources/inward/bill/finalBill_vat.xhtml
@@ -31,7 +31,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="4"><h:outputLabel class="mark" value="VAT Invoice" /></td>
+                            <td colspan="4"><h:outputLabel class="mark" value="Invoice" /></td>
                         </tr>
                         <tr>
                             <td colspan="4"><h:outputLabel class="mark" value="**DUPLICATE**" rendered="#{cc.attrs.duplicate eq true}"/></td>
